Some general design fixes
* Background panorama no longer rescales, when scrolling on a mobile device
* Windows no longer cut off at the top and bottom of the screen on mobile devices

--- a/projects/toolbox-main/src/app/common/elements/error-handler/error-handler.component.scss
+++ b/projects/toolbox-main/src/app/common/elements/error-handler/error-handler.component.scss
@@ -33,6 +33,7 @@ pre {
 .positioner {
 	display: flex;
 	min-height: 100vh;
+	min-height: 100svh;
 	flex-direction: column;
 	justify-content: center;
 }
