--- a/projects/toolbox-main/src/app/common/views/window/window.component.scss
+++ b/projects/toolbox-main/src/app/common/views/window/window.component.scss
@@ -52,6 +52,7 @@ button {
 		width: 100%;
 		max-width: 1100px;
 		max-height: 85vh;
+		max-height: 85svh;
 		background-clip: content-box;
 
 		&>.content {
