--- a/projects/toolbox-main/src/app/common/views/windows/credits/credits.component.scss
+++ b/projects/toolbox-main/src/app/common/views/windows/credits/credits.component.scss
@@ -5,6 +5,7 @@
 :host {
 	display: block;
 	height: 85vh;
+	height: 85svh;
 	overflow: hidden;
 	background-image: url("../../../../../style/images/dirt_block_dark.png");
 	background-size: 48px;
