--- a/projects/toolbox-main/src/styles.scss
+++ b/projects/toolbox-main/src/styles.scss
@@ -56,4 +56,5 @@ u {
 	align-items: center;
 	flex-direction: column;
 	min-height: 100vh;
+	min-height: 100svh;
 }
